# simd-par

./: Cargo.toml  Dot_Product_Benchmark_Results.csv  README.md
benches/: simd.rs  test.rs
src/: main.rs
