[package]
name = "tinker"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"

# For aligning allocations (optional)
aligned = "0.4.2"
rayon = "1.10.0"

[dev-dependencies]
# criterion = "0.5.1"
criterion = { version = "0.5", features = ["html_reports"] }
aligned = "0.4" 

[[bench]]
name = "simd"
harness = false

[features]
default = []
portable-simd = []
